--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ body {
   border-radius: 5px;
 }
 
-.login-button {
+.login {
   width: 100%;
   padding: 12px;
   background-color: #1877f2;
@@ -77,7 +77,7 @@ body {
   text-decoration: none;
 }
 
-.create-account-button {
+.signup {
   width: 100%;
   padding: 12px;
   background-color: #42b72a;
